--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "cSpell.words": [
+        "APRS",
+        "Baofeng",
         "Bazel",
         "Curseforge",
         "DSLR",
+        "DTMF",
         "Keybase",
         "Litematica",
         "Minecraft",
@@ -15,6 +18,7 @@
         "Starlark",
         "buildscript",
         "clicky",
+        "digipeater",
         "keycaps",
         "libc",
         "manpages",
