--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://retrylife.ca" # the base hostname & protocol for your site, e.g. http://example.com
 
 about: >-
-  I am a 17 year old programming student. I enjoy learning new concepts, 
+  I am an 18 year old programming student. I enjoy learning new concepts, 
   building projects out of random ideas and obscure technologies, and working with new tools. 
   My projects range from building tools to help me with school work, and robotics, to radios 
   and video production.
