--- a/config.toml
+++ b/config.toml
@@ -21,3 +21,4 @@ twitter = "ewpratten"
 github = "ewpratten"
 qrz = "va3zza"
 linkedin = "ewpratten"
+profile_photo = "https://avatars.githubusercontent.com/u/21065412"
