meme month stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "callsign",
+        "callsigns",
         "centimetre",
         "grayscale",
         "inpainting",
