--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "callsign",
         "callsigns",
         "centimetre",
+        "configurability",
         "grayscale",
         "inpainting",
         "rotoscope"
