--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://va3zza.com"
+base_url = "https://ewpratten.com"
 title = "Evan Pratten"
 description = "Evan Pratten is a college student, amateur radio operator, software developer, and more. This is his website."
 default_language = "en"
@@ -16,7 +16,7 @@ external_links_target_blank = true
 [extra]
 name = "Evan Pratten"
 profession = "Software Developer"
-email = "mail@va3zza.com"
+email = "contact@ewpratten.com"
 twitter = "ewpratten"
 github = "ewpratten"
 qrz = "va3zza"
