--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,6 @@ jobs:
         with:
           target_branch: gh-pages
           build_dir: public
-          fqdn: va3zza.com
+          fqdn: apex.gh-proxy.ewpratten.com
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
