working on music pages

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,16 @@
                 "--open"
             ],
             "problemMatcher": []
+        },
+        {
+            "label": "Launch development webserver (without drafts)",
+            "type": "shell",
+            "command": "zola",
+            "args": [
+                "serve",
+                "--open"
+            ],
+            "problemMatcher": []
         }
     ]
 }
