--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,6 +23,14 @@
                 "--open"
             ],
             "problemMatcher": []
+        },
+        {
+            "label": "Compile assets",
+            "type": "shell",
+            "command": "make",
+            "args": [
+            ],
+            "problemMatcher": []
         }
     ]
 }
