--- a/config.toml
+++ b/config.toml
@@ -13,6 +13,12 @@ highlight_code = true
 render_emoji = true
 external_links_target_blank = true
 
+[link_checker]
+skip_prefixes = []
+skip_anchor_prefixes = []
+internal_level = "error"
+external_level = "error"
+
 [extra]
 # Website
 domain_name = "ewpratten.com"
