--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,11 +27,26 @@ jobs:
       - name: Disable Jekyll
         run: sudo touch ./public/.nojekyll
 
+      - name: Publish site as artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: website
+          path: ./public
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/master'
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      
+      - name: Download website bundle
+        uses: actions/download-artifact@v2
+        with:
+          name: website
+          path: ./public
+
       - name: Deploy to GitHub Pages
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
