--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,7 @@ jobs:
         run: sudo touch ./public/.nojekyll
 
       - name: Copy generated dist files
-        run: cp -r ./static/dist/* ./public/dist
+        run: sudo cp -r ./static/dist/* ./public/dist
 
       - name: Publish site as artifact
         uses: actions/upload-artifact@v2
