--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Disable Jekyll
         run: sudo touch ./public/.nojekyll
 
-      - name: Copy generated dist files
-        run: sudo cp -r ./static/dist/* ./public/dist
+      - name: Delete dist gitignore
+        run: rm -f ./public/dist/.gitignore
 
       - name: Publish site as artifact
         uses: actions/upload-artifact@v2
