self-hosted pfp

--- a/config.toml
+++ b/config.toml
@@ -25,7 +25,7 @@ domain_name = "ewpratten.com"
 # Me
 name = "Evan Pratten"
 profession = "Software Developer"
-profile_photo = "https://avatars.githubusercontent.com/u/21065412"
+profile_photo = "https://branding.ewpratten.com/pfp/2022/460x460.png"
 # Accounts
 email = "evan@ewpratten.com"
 github = "ewpratten"
