--- a/.github/workflows/build-on-commit.yml
+++ b/.github/workflows/build-on-commit.yml
@@ -7,4 +7,7 @@ on:
 
 jobs:
   call-build:
-    uses: ./.github/workflows/build-site.yml
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: ./.github/workflows/build-site.yml
