--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,12 +5,18 @@ on:
       - "master"
 
 jobs:
+  build:
+    uses: ./.github/workflows/build.yml
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Build Site
-        uses: ./.github/workflows/common/build-site.yml
+      - name: Download bundle artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: website
+          path: ./public
 
       - name: Deploy to GitHub Pages
         if: success()
