--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Download bundle artifact
         uses: actions/download-artifact@v2
         with:
-          name: website
+          name: website-static-bundle
           path: ./public
 
       - name: Deploy to GitHub Pages
