--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,18 +22,13 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v1
 
-      # - name: Download bundle artifact
-      #   uses: actions/download-artifact@v2
-      #   with:
-      #     name: website-static-bundle
-      #     path: ./public
-
-      # - name: Deploy to GitHub Pages
-      #   if: success()
-      #   uses: crazy-max/ghaction-github-pages@v2
-      #   with:
-      #     target_branch: gh-pages
-      #     build_dir: public
-      #     fqdn: ewpratten.com
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  purge_cache:
+    runs_on: ubuntu-latest
+    needs: build
+    environment:
+      name: cloudflare-api
+    - name: Purge Cloudflare Cache
+      uses: jakejarvis/cloudflare-purge-action@master
+      env:
+        CLOUDFLARE_ZONE: "ewpratten.com"
+        CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
