--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,8 @@ jobs:
         uses: actions/deploy-pages@v1
 
   purge_cache:
-    runs_on: ubuntu-latest
-    needs: build
+    runs-on: ubuntu-latest
+    needs: deploy
     environment:
       name: cloudflare-api
     steps:
