--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,14 +22,14 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v1
 
-  purge_cache:
-    runs-on: ubuntu-latest
-    needs: deploy
-    environment:
-      name: cloudflare-api
-    steps:
-      - name: Purge Cloudflare Cache
-        uses: jakejarvis/cloudflare-purge-action@master
-        env:
-          CLOUDFLARE_ZONE: "ewpratten.com"
-          CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
+  # purge_cache:
+  #   runs-on: ubuntu-latest
+  #   needs: deploy
+  #   environment:
+  #     name: cloudflare-api
+  #   steps:
+  #     - name: Purge Cloudflare Cache
+  #       uses: jakejarvis/cloudflare-purge-action@master
+  #       env:
+  #         CLOUDFLARE_ZONE: "ewpratten.com"
+  #         CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
