--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,16 +16,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
+      # - name: Setup Node.js
+      #   uses: actions/setup-node@v1
+      #   with:
+      #     node-version: 12.x
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Compile assets
-        run: make
+      # - name: Install dependencies
+      #   run: npm install
 
       - name: Build
         uses: TonySpegel/zola-build-action@v1
