--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,10 +27,11 @@ jobs:
       - name: Allow all dirs
         run: git config --global --add safe.directory '*'
 
-      - name: Build
-        uses: TonySpegel/zola-build-action@v1
+      - name: Build only 
+        uses: shalzz/zola-deploy-action@v0.16.1-1
         env:
-          CONFIG_FILE: "config.toml"
+          BUILD_DIR: public
+          BUILD_ONLY: true
 
       - name: Disable Jekyll
         run: sudo touch ./public/.nojekyll
