--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "configurability",
         "grayscale",
         "inpainting",
-        "rotoscope"
+        "rotoscope",
+        "Tapermonkey"
     ]
 }
