--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,15 @@
         "inpainting",
         "rotoscope",
         "Tapermonkey"
-    ]
+    ],
+    "files.associations": {
+        "*.json.liquid": "json",
+        "*.yaml.liquid": "yaml",
+        "*.md.liquid": "markdown",
+        "*.js.liquid": "liquid-javascript",
+        "*.css.liquid": "liquid-css",
+        "*.scss.liquid": "liquid-scss",
+        "_headers": "plaintext",
+        "_redirects": "plaintext",
+    }
 }
