starting new post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
     "cSpell.words": [
+        "Baofeng",
         "callsign",
         "callsigns",
         "centimetre",
         "configurability",
         "fileserver",
         "grayscale",
+        "homebrewed",
         "inpainting",
         "rotoscope",
         "Tapermonkey",
