--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ compile_sass = true
 build_search_index = true
 generate_feed = true
 feed_filename = "rss.xml"
-minify_html = false
+minify_html = true
 
 [markdown]
 highlight_code = true
