Adding alias script

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,6 +23,17 @@
                 "--open"
             ],
             "problemMatcher": []
+        },
+        {
+            "label": "Initialize Python venv",
+            "type": "shell",
+            "command": "python3",
+            "args": [
+                "-m",
+                "venv",
+                ".venv"
+            ],
+            "problemMatcher": []
         }
     ]
 }
