--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,6 @@
         "*.scss.liquid": "liquid-scss",
         "_headers": "plaintext",
         "_redirects": "plaintext",
-    }
+    },
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
 }
