--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ build_search_index = true
 generate_feed = true
 feed_filename = "rss.xml"
 minify_html = false # This breaks mermaid diagrams :(
+ignored_content = ["content/@/blog/*.md"]
 
 [markdown]
 highlight_code = true
