--- a/content/.obsidian/app.json
+++ b/content/.obsidian/app.json
@@ -1,5 +1,5 @@
 {
-  "newFileLocation": "folder",
+  "newFileLocation": "root",
   "newFileFolderPath": "blog",
   "newLinkFormat": "absolute",
   "useMarkdownLinks": true,
