--- a/.github/workflows/copyright-check.yml
+++ b/.github/workflows/copyright-check.yml
@@ -17,6 +17,8 @@ jobs:
       - name: Check if LICENSE file has changed
         id: license-check
         run: |
+            ls /home/runner/work/ewpratten.com
+            ls /home/runner/work/ewpratten.com/ewpratten.com
             diff /tmp/correct_license ${GITHUB_WORKSPACE}/LICENSE
       - name: Display a commit comment if the year is wrong
         if: steps.license-check.outcome == 'failure'
